fix: picture carousel last child overlap

--- a/src/app/(pages)/(static)/picture/style.module.css
+++ b/src/app/(pages)/(static)/picture/style.module.css
@@ -91,7 +91,7 @@
 }
 
 .imageSection:last-child{
-  margin-right: 295px;
+  margin-right: 60px;
 }
 .imageSection {
   width: 295px;
